# news_curator_project

Assignments/AIDI-1-2/Applied ML/: Medical_Cost_Prediction.txt
hospital_scheduler/: README.md  pyproject.toml
hospital_scheduler/src/hospital_scheduler/: crew.py  gradio_app.py  main.py  test.py
hospital_scheduler/src/hospital_scheduler/config/: agents.yaml  tasks.yaml
hospital_scheduler/src/hospital_scheduler/tools/: database_tool.py
news_curator_project/: README.md  pyproject.toml  report.md
news_curator_project/src/news_curator_project/: crew.py  main.py
