[project]
name = "hospital_scheduler"
version = "0.1.0"
description = "hospital_scheduler using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
hospital_scheduler = "hospital_scheduler.main:run"
run_crew = "hospital_scheduler.main:run"
train = "hospital_scheduler.main:train"
replay = "hospital_scheduler.main:replay"
test = "hospital_scheduler.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
