[project]
name = "news_curator_project"
version = "0.1.0"
description = "news_curator_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
news_curator_project = "news_curator_project.main:run"
run_crew = "news_curator_project.main:run"
train = "news_curator_project.main:train"
replay = "news_curator_project.main:replay"
test = "news_curator_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
